[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["aiosnmp"]
known_third_party = ["pytest"]
